Se subio pipeline con sca 1.2

--- a/.github/workflows/pipeline-build.yaml
+++ b/.github/workflows/pipeline-build.yaml
@@ -41,6 +41,8 @@ jobs:
 
       - name: "Dependency-check"
         uses: dependency-check/Dependency-Check_Action@main
+        env:
+          JAVA_HOME: /opt/jdk
         id: Depcheck
         with:
           project: 'test'
