--- a/.github/workflows/pipeline-build.yaml
+++ b/.github/workflows/pipeline-build.yaml
@@ -45,16 +45,17 @@ jobs:
           JAVA_HOME: /opt/jdk
         id: Depcheck
         with:
-          project: 'test'
+          project: 'WebGoat'
           path: '.'
           format: 'HTML'
           out: 'reports' # this is the default, no need to specify unless you wish to override it
-          args: >
-            --failOnCVSS 7
-            --enableRetired
 
       - name: "Resultados del test"
         uses: actions/upload-artifact@master
         with:
           name: "Reporte"
           path: ${{github.workspace}}/reports
+
+      - name: "Verificar reporte"
+        run: ls -ltra reports
+        
