Se sube pilepline con imagenes docker 1

--- a/.github/workflows/pipeline-build.yaml
+++ b/.github/workflows/pipeline-build.yaml
@@ -80,4 +80,14 @@ jobs:
         with:
           arguments: -p="./" --return-error -e="false"
         #run: horusec start -p="./" --return-error -e="false"
+
+  docker:
+    runs-on: ubuntu-latest
+    steps:
+      - name: "Crear la imagen"
+        run: docker build -t test . 
+
+      - name: "Verificar paquete"
+        run: docker images
+
         
