--- a/.github/workflows/pipeline-build.yaml
+++ b/.github/workflows/pipeline-build.yaml
@@ -84,10 +84,16 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      - name: "Crear la imagen"
-        run: docker build -t test . 
-
-      - name: "Verificar paquete"
-        run: docker images
+      - name: "Set up Docker Buildx"
+        uses: docker/setup-buildx-action@main
+      - name: "Build and push"
+        uses: docker/build-push-action@v5
+        with:
+          context: ./
+          file: ./Dockerfile
+          push: true
+          tags: ./test
+      - name: "Image digest"
+        run: echo ${{ steps.docker_build.outputs.digest }}
 
         
