--- a/.github/workflows/pipeline-build.yaml
+++ b/.github/workflows/pipeline-build.yaml
@@ -85,7 +85,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: "Set up Docker Buildx"
-        uses: docker/setup-buildx-action@main
+        uses: docker/setup-buildx-action@master
       - name: "Build and push"
         uses: docker/build-push-action@v5
         with:
