--- a/.github/workflows/pipeline-build.yaml
+++ b/.github/workflows/pipeline-build.yaml
@@ -92,7 +92,7 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: ./test
+          #tags: 
       - name: "Image digest"
         run: echo ${{ steps.docker_build.outputs.digest }}
 
