Se sube pilepline con imagenes docker 3.3

--- a/.github/workflows/pipeline-build.yaml
+++ b/.github/workflows/pipeline-build.yaml
@@ -92,7 +92,7 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          #tags: 
+          tags: user/app:latest
       - name: "Image digest"
         run: echo ${{ steps.docker_build.outputs.digest }}
 
