Se sube pilepline con imagenes docker 4.1

--- a/.github/workflows/pipeline-build.yaml
+++ b/.github/workflows/pipeline-build.yaml
@@ -62,6 +62,9 @@ jobs:
       - name: "Crear imagen de Docker"
         run: docker build -t prueba ./
 
+      - name: "Verificar imagen"
+        run: ls -ltra 
+
   horusec:
     runs-on: ubuntu-latest
     steps:
