Se sube pilepline con imagenes docker 4.2

--- a/.github/workflows/pipeline-build.yaml
+++ b/.github/workflows/pipeline-build.yaml
@@ -63,7 +63,7 @@ jobs:
         run: docker build -t prueba ./
 
       - name: "Verificar imagen"
-        run: ls -ltra 
+        run: docker images 
 
   horusec:
     runs-on: ubuntu-latest
