--- a/.github/workflows/pipeline-build.yaml
+++ b/.github/workflows/pipeline-build.yaml
@@ -66,7 +66,7 @@ jobs:
         run: docker images 
 
       - name: "Crear contenedor"
-        run: docker run --name container-prueba webgoat
+        run: docker run -d --name container-prueba webgoat
 
       - name: "Verificar contenedor"
         run: docker container ls -a
