Se sube pilepline con trivy

--- a/.github/workflows/pipeline-build.yaml
+++ b/.github/workflows/pipeline-build.yaml
@@ -65,6 +65,14 @@ jobs:
       - name: "Verificar imagen"
         run: docker images 
 
+      - name: "Ejecutar trivy"
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: 'webgoat'
+          format: 'table'
+          exit-code: '1'
+          ignore-unfixed: true
+
       - name: "Crear contenedor"
         run: docker run -d -p 8080:8080 --name container-prueba webgoat
 
