--- a/.github/workflows/pipeline-build.yaml
+++ b/.github/workflows/pipeline-build.yaml
@@ -66,7 +66,7 @@ jobs:
         run: docker images 
 
       - name: "Ejecutar trivy"
-        uses: aquasecurity/trivy-action@main
+        uses: aquasecurity/trivy-action@v1
         with:
           image-ref: 'webgoat'
           format: 'table'
