--- a/.github/workflows/pipeline-build.yaml
+++ b/.github/workflows/pipeline-build.yaml
@@ -66,12 +66,7 @@ jobs:
         run: docker images 
 
       - name: "Ejecutar trivy"
-        uses: aquasecurity/trivy-action@v1
-        with:
-          image-ref: 'webgoat'
-          format: 'table'
-          exit-code: '1'
-          ignore-unfixed: true
+        run: trivy image webgoat
 
       - name: "Crear contenedor"
         run: docker run -d -p 8080:8080 --name container-prueba webgoat
