Se sube pilepline con trivy 3.1

--- a/.github/workflows/pipeline-build.yaml
+++ b/.github/workflows/pipeline-build.yaml
@@ -68,7 +68,7 @@ jobs:
       - name: "Ejecutar trivy"
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: webgoat
+          image-ref: './webgoat'
           format: 'table'
           exit-code: '0'
           ignore-unfixed: false
