--- a/.github/workflows/pipeline-build.yaml
+++ b/.github/workflows/pipeline-build.yaml
@@ -66,11 +66,11 @@ jobs:
         run: docker images 
 
       - name: "Ejecutar trivy"
-        uses: aquasecurity/trivy-action@0.0.6
+        uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'webgoat'
+          image-ref: 'webgoat:${{ github.sha }}'
           format: 'table'
-          exit-code: '0'
+          exit-code: '1'
           ignore-unfixed: false
         
 
