--- a/.github/workflows/pipeline-build.yaml
+++ b/.github/workflows/pipeline-build.yaml
@@ -80,6 +80,15 @@ jobs:
       - name: "Verificar contenedor"
         run: docker ps -a
 
+      - name: "IP publica del contenedor"
+        run: docker inspect webgoat
+
+      - name: "Descargar arachni"
+        run: |
+              wget https://github.com/Arachni/arachni/releases/download/v1.6.1.3/arachni-1.6.1.3-0.6.1.1-linux-x86_64.tar.gz
+              tar -xvf arachni-1.6.1.3-0.6.1.1-linux-x86_64.tar.gz
+
+
 
   horusec:
     runs-on: ubuntu-latest
