--- a/.github/workflows/pipeline-build.yaml
+++ b/.github/workflows/pipeline-build.yaml
@@ -86,7 +86,7 @@ jobs:
               tar -xvf arachni-1.6.1.3-0.6.1.1-linux-x86_64.tar.gz
       
       - name: "Encontrar IP del contenedor"
-        run: var_IP=$(docker inspect WebGoat | grep "IPAddress" | tail -1 | cut -d '"' -f 4)
+        run: var_IP=$(docker inspect container-prueba | grep "IPAddress" | tail -1 | cut -d '"' -f 4)
  
       - name: "Ejecutar arachni"
         run: ./arachni-1.6.1.3-0.6.1.1/bin/arachni --check=* http://$var_IP:8080/WebGoat/login
