--- a/.github/workflows/pipeline-build.yaml
+++ b/.github/workflows/pipeline-build.yaml
@@ -65,13 +65,13 @@ jobs:
       - name: "Verificar imagen"
         run: docker images 
 
-      - name: "Ejecutar trivy"
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: 'webgoat'
-          format: 'table'
-          ignore-unfixed: false
-          timeout: 15m0s
+      #- name: "Ejecutar trivy"
+        #uses: aquasecurity/trivy-action@master
+        #with:
+          #image-ref: 'webgoat'
+          #format: 'table'
+          #ignore-unfixed: false
+          #timeout: 15m0s
         
 
       - name: "Crear contenedor"
