--- a/.github/workflows/pipeline-build.yaml
+++ b/.github/workflows/pipeline-build.yaml
@@ -85,11 +85,13 @@ jobs:
               wget https://github.com/Arachni/arachni/releases/download/v1.6.1.3/arachni-1.6.1.3-0.6.1.1-linux-x86_64.tar.gz
               tar -xvf arachni-1.6.1.3-0.6.1.1-linux-x86_64.tar.gz
       
-      - name: "Encontrar IP del contenedor"
-        run: docker inspect container-prueba
+      #- name: "Encontrar IP del contenedor"
+        #run: docker inspect container-prueba
  
-      #- name: "Ejecutar arachni"
-        #run: ./arachni-1.6.1.3-0.6.1.1/bin/arachni --check=* http://$var_IP:8080/WebGoat/login
+      - name: "Ejecutar arachni"
+        run: |
+              var_IP=$(docker inspect container-prueba | grep "IPAddress" | tail -1 | cut -d '"' -f 4)
+              ./arachni-1.6.1.3-0.6.1.1/bin/arachni --check=* http://$var_IP:8080/WebGoat/login
       
 
 
