--- a/.github/workflows/pipeline-webgoat.yaml
+++ b/.github/workflows/pipeline-webgoat.yaml
@@ -51,6 +51,21 @@ jobs:
               terraform -chdir=terraform/ plan -out tfplan
               terraform -chdir=terraform/ apply tfplan
 
+      - name: "Ejecutar ansible"
+        run: |
+              cd ansible/
+              var_IP=$(terraform -chdir=terraform/ output | grep "My_ip =" | tail -1 | cut -d '"' -f 2)
+              sed -i "s/INSTANCIA/$var_IP/" inventario
+              sudo ansible-playbook -i inventario server.yaml --become
+
+      - name: "Tirar infra"
+        run: |
+              cd terraform/ 
+              terraform plan -destroy -out tfplan
+              terraform apply tfplan
+
+
+
       #- name: "Descargar arachni"
        # run: |
         #      wget https://github.com/Arachni/arachni/releases/download/v1.6.1.3/arachni-1.6.1.3-0.6.1.1-linux-x86_64.tar.gz
