--- a/.github/workflows/pipeline-webgoat.yaml
+++ b/.github/workflows/pipeline-webgoat.yaml
@@ -52,11 +52,31 @@ jobs:
               terraform -chdir=terraform/ apply tfplan
 
       - name: "Ejecutar ansible"
+        env:
+          PRIVATE_KEY: ${{ secret.PEM_SECRET }}
         run: |
+              sudo apt update
+              sudo apt install -y ansible
               cd ansible/
-              var_IP=$(terraform -chdir=terraform/ output | grep "My_ip =" | tail -1 | cut -d '"' -f 2)
+              echo "$PEM_SECRET" >> $HOME/key.pem
+              sudo chmod 600 $HOME/key.pem
+              var_IP=$(terraform -chdir=../terraform/ output | grep "My_ip =" | tail -1 | cut -d '"' -f 2)
               sed -i "s/INSTANCIA/$var_IP/" inventario
+              export ANSIBLE_HOST_KEY_CHECKING=False
               sudo ansible-playbook -i inventario server.yaml --become
+        continue-on-error: true
+
+      - name: "Descargar arachni"
+        run: |
+              wget https://github.com/Arachni/arachni/releases/download/v1.6.1.3/arachni-1.6.1.3-0.6.1.1-linux-x86_64.tar.gz
+              tar -xvf arachni-1.6.1.3-0.6.1.1-linux-x86_64.tar.gz
+        continue-on-error: true
+
+      - name: "Ejecutar arachni"
+        run: |
+              var_IP=$(terraform -chdir=../terraform/ output | grep "My_ip =" | tail -1 | cut -d '"' -f 2)
+              ./arachni-1.6.1.3-0.6.1.1/bin/arachni --check=* http://$var_IP:8080/WebGoat/login
+        continue-on-error: true
 
       - name: "Tirar infra"
         run: |
