--- a/.github/workflows/pipeline-webgoat.yaml
+++ b/.github/workflows/pipeline-webgoat.yaml
@@ -63,7 +63,7 @@ jobs:
               var_IP=$(terraform -chdir=../terraform/ output | grep "My_ip =" | tail -1 | cut -d '"' -f 2)
               sed -i "s/INSTANCIA/$var_IP/" inventario
               export ANSIBLE_HOST_KEY_CHECKING=False
-              sudo ansible-playbook -i inventario server.yaml --become
+              sudo ansible-playbook -i inventario server.yaml --become --private-key $HOME/key.pem
         continue-on-error: true
 
       - name: "Descargar arachni"
@@ -74,7 +74,7 @@ jobs:
 
       - name: "Ejecutar arachni"
         run: |
-              var_IP=$(terraform -chdir=../terraform/ output | grep "My_ip =" | tail -1 | cut -d '"' -f 2)
+              var_IP=$(terraform -chdir=terraform/ output | grep "My_ip =" | tail -1 | cut -d '"' -f 2)
               ./arachni-1.6.1.3-0.6.1.1/bin/arachni --check=* http://$var_IP:8080/WebGoat/login
         continue-on-error: true
 
@@ -83,20 +83,6 @@ jobs:
               cd terraform/ 
               terraform plan -destroy -out tfplan
               terraform apply tfplan
-
-
-
-      #- name: "Descargar arachni"
-       # run: |
-        #      wget https://github.com/Arachni/arachni/releases/download/v1.6.1.3/arachni-1.6.1.3-0.6.1.1-linux-x86_64.tar.gz
-         #     tar -xvf arachni-1.6.1.3-0.6.1.1-linux-x86_64.tar.gz
-      
- 
- 
-      #- name: "Ejecutar arachni"
-       # run: |
-        #      var_IP=$(docker inspect container-prueba | grep "IPAddress" | tail -1 | cut -d '"' -f 4)
-         #     ./arachni-1.6.1.3-0.6.1.1/bin/arachni --check=* http://$var_IP:8080/WebGoat/login
       
 
 
