--- a/.github/workflows/pipeline-webgoat.yaml
+++ b/.github/workflows/pipeline-webgoat.yaml
@@ -57,13 +57,13 @@ jobs:
         run: |
               sudo apt update
               sudo apt install -y ansible
-              cd ansible/
-              echo $PRIVATE_KEY >> $HOME/key.pem
+              cd ansible
+              echo "$PRIVATE_KEY" >> $HOME/key.pem
               sudo chmod 600 $HOME/key.pem
               var_IP=$(terraform -chdir=../terraform/ output | grep "My_ip =" | tail -1 | cut -d '"' -f 2)
               sed -i "s/INSTANCIA/$var_IP/" inventario
               export ANSIBLE_HOST_KEY_CHECKING=False
-              sudo ansible-playbook -i inventario server.yaml --become --private-key $HOME/key.pem
+              ansible-playbook -i inventario server.yaml --become --private-key $HOME/key.pem
         continue-on-error: true
 
       - name: "Descargar arachni"
