--- a/ansible/server.yaml
+++ b/ansible/server.yaml
@@ -44,13 +44,13 @@
 
     - name: Pull default Docker image
       community.docker.docker_image:
-        name: public.ecr.aws/n3j7o1e0/fernandagarcia:latest
+        name: public.ecr.aws/w2x5h8r5/demo1:latest
         source: pull
 
     - name: Create default containers
       community.docker.docker_container:
         name: WebGoat
-        image: public.ecr.aws/n3j7o1e0/fernandagarcia
+        image: public.ecr.aws/w2x5h8r5/demo1
         state: started
         ports:
           - '8080:8080'
