--- a/.github/workflows/pipeline-webgoat.yaml
+++ b/.github/workflows/pipeline-webgoat.yaml
@@ -18,8 +18,8 @@ jobs:
           distribution: "temurin"
           java-version: "17"
 
-      - name: "Compilacion"    
-        run: ./mvnw clean install
+      #- name: "Compilacion"    
+       # run: ./mvnw clean install
 
       - name: "Verificar paquete"
         run: ls -ltra target
@@ -52,12 +52,12 @@ jobs:
         id: checkov
         uses: bridgecrewio/checkov-action@master
         with:
-          directory: example/examplea
+          directory: ./
           framework: terraform
           output_format: sarif
           output_file_path: reports/results.sarif
 
-      - name: "SUbir reporte"
+      - name: "Subir reporte"
         uses: github/codeql-action/upload-sarif@v2
         if: success() || failure()
         with:
