Se sube pilepline de WG examen 5.3

--- a/.github/workflows/pipeline-webgoat.yaml
+++ b/.github/workflows/pipeline-webgoat.yaml
@@ -21,8 +21,8 @@ jobs:
       #- name: "Compilacion"    
        # run: ./mvnw clean install
 
-      - name: "Verificar paquete"
-        run: ls -ltra target
+      #- name: "Verificar paquete"
+       # run: ls -ltra target
 
       - name: "Crear imagen de Docker"
         run: docker build -t webgoat ./
