--- a/.github/workflows/pipeline-webgoat.yaml
+++ b/.github/workflows/pipeline-webgoat.yaml
@@ -18,11 +18,11 @@ jobs:
           distribution: "temurin"
           java-version: "17"
 
-      #- name: "Compilacion"    
-       # run: ./mvnw clean install
+      - name: "Compilacion"    
+        run: ./mvnw clean install
 
-      #- name: "Verificar paquete"
-       # run: ls -ltra target
+      - name: "Verificar paquete"
+        run: ls -ltra target
 
       - name: "Crear imagen de Docker"
         run: docker build -t webgoat ./
@@ -48,11 +48,12 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.8
+
       - name: "Ejecutar Checkov"
         id: checkov
         uses: bridgecrewio/checkov-action@master
         with:
-          directory: ./
+          directory: terraform
           framework: terraform
           output_format: sarif
           output_file_path: reports/results.sarif
