--- a/.github/workflows/pipeline-webgoat.yaml
+++ b/.github/workflows/pipeline-webgoat.yaml
@@ -57,12 +57,7 @@ jobs:
           framework: terraform
           output_format: sarif
           output_file_path: reports/results.sarif
-
-      - name: "Subir reporte"
-        uses: github/codeql-action/upload-sarif@v2
-        if: success() || failure()
-        with:
-          sarif_file: results.sarif
+        continue-on-error: true
 
       - name: "Aprovisionar terraform"
         run: |
