--- a/.github/workflows/pipeline-webgoat.yaml
+++ b/.github/workflows/pipeline-webgoat.yaml
@@ -93,11 +93,11 @@ jobs:
               ./arachni-1.6.1.3-0.6.1.1/bin/arachni --check=* http://$var_IP:8080/WebGoat/login
         continue-on-error: true
 
-      - name: "Tirar infra"
-        run: |
-              cd terraform/ 
-              terraform plan -destroy -out tfplan
-              terraform apply tfplan
+      #- name: "Tirar infra"
+       # run: |
+        #      cd terraform/ 
+         #     terraform plan -destroy -out tfplan
+          #    terraform apply tfplan
       
 
 
