--- a/.github/workflows/pipeline-build.yaml
+++ b/.github/workflows/pipeline-build.yaml
@@ -65,13 +65,13 @@ jobs:
       - name: "Verificar imagen"
         run: docker images 
 
-      #- name: "Ejecutar trivy"
-        #uses: aquasecurity/trivy-action@master
-        #with:
-          #image-ref: 'webgoat'
-          #format: 'table'
-          #ignore-unfixed: false
-          #timeout: 15m0s
+      - name: "Ejecutar trivy"
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: 'webgoat'
+          format: 'table'
+          ignore-unfixed: false
+          timeout: 15m0s
         
 
       - name: "Crear contenedor"
@@ -92,7 +92,7 @@ jobs:
         run: |
               var_IP=$(docker inspect container-prueba | grep "IPAddress" | tail -1 | cut -d '"' -f 4)
               ./arachni-1.6.1.3-0.6.1.1/bin/arachni --check=* http://$var_IP:8080/WebGoat/login
-      
+
 
 
   horusec:
