--- a/.github/workflows/pipeline-build.yaml
+++ b/.github/workflows/pipeline-build.yaml
@@ -47,14 +47,17 @@ jobs:
         with:
           project: 'WebGoat'
           path: '.'
-          format: 'HTML'
-          out: 'reports' # this is the default, no need to specify unless you wish to override it
+          format: 'sarif'
+          out: 'reportsDC' # this is the default, no need to specify unless you wish to override it
 
       - name: "Resultados del test"
         uses: actions/upload-artifact@master
         with:
           name: "Reporte"
           path: ${{github.workspace}}/reports
+        uses: github/codeql-action/upload-sarif@v2        
+        with:          # Path to SARIF file relative to the root of the repository          
+          sarif_file: ${{github.workspace}}/reports/reportsDC.sarif
 
       - name: "Verificar reporte"
         run: ls -ltra reports
@@ -92,6 +95,16 @@ jobs:
         run: |
               var_IP=$(docker inspect container-prueba | grep "IPAddress" | tail -1 | cut -d '"' -f 4)
               ./arachni-1.6.1.3-0.6.1.1/bin/arachni --check=* http://$var_IP:8080/WebGoat/login
+
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v2
+        with:
+          languages: ${{ matrix.language }}
+
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v2
+        with:
+          category: "/language:${{matrix.language}}"
 
 
 
