Se sube pilepline final y build 1.3

--- a/.github/workflows/pipeline-build.yaml
+++ b/.github/workflows/pipeline-build.yaml
@@ -55,6 +55,8 @@ jobs:
         with:
           name: "Reporte"
           path: ${{github.workspace}}/reports
+
+      - name: "Subir SARIF"
         uses: github/codeql-action/upload-sarif@v2        
         with:          # Path to SARIF file relative to the root of the repository          
           sarif_file: ${{github.workspace}}/reports/reportsDC.sarif
