--- a/.github/workflows/pipeline-build.yaml
+++ b/.github/workflows/pipeline-build.yaml
@@ -72,7 +72,7 @@ jobs:
           format: 'sarif'
           output: 'trivy-results.sarif'
           ignore-unfixed: false
-          timeout: 15m0ss
+          timeout: 15m0s
 
       - name: "Subir reporte de trivi a scan"
         uses: github/codeql-action/upload-sarif@v2
