--- a/.github/workflows/pipeline-build.yaml
+++ b/.github/workflows/pipeline-build.yaml
@@ -41,6 +41,9 @@ jobs:
         with:
           python-version: 3.8
 
+        run: |
+              pip3 install --upgrade pip
+
       - name: "Compilacion 2"
         run: ./mvnw clean install
 
