Se sube pilepline build con DD 1.2

--- a/.github/workflows/pipeline-build.yaml
+++ b/.github/workflows/pipeline-build.yaml
@@ -41,6 +41,7 @@ jobs:
         with:
           python-version: 3.8
 
+      - name: "Actualizar dep de python"
         run: |
               pip3 install --upgrade pip
 
