--- a/.github/workflows/pipeline-build.yaml
+++ b/.github/workflows/pipeline-build.yaml
@@ -43,7 +43,9 @@ jobs:
 
       - name: "Actualizar dep de python"
         run: |
-              pip3 install --upgrade pip
+              pip3 install requests
+              pip3 install json
+              pip3 install argparse
 
       - name: "Compilacion 2"
         run: ./mvnw clean install
